--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <head> 
 	<meta charset="UTF-8" />
-	<title>flappy bird</title>
+	<title>FlappyMell</title>
     <script src="phaser.min.js"></script>
     <script src="js/main.js"></script>
     <style>
@@ -21,5 +21,6 @@
     </style>
 </head>
 <body>
+
 
 </body>
